--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \setcounter{page}{0}
 \pagenumbering{roman}
 
-\input{frontmatter/preface}
+% \input{frontmatter/preface}
 \input{frontmatter/abstract}
 
 \cleardoublepage
